<resources>
    <!-- 主界面 -->
    <string name="app_name">随手拍</string>
    <string name="tab_home">首页</string>
    <string name="tab_mine">我</string>
    <string name="setting">设置</string>
    <string name="log_off">注销</string>

    <!-- 登录界面 -->
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_again">再次密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_not_consistent_password">两次密码不一致</string>
    <string name="nick_name_has_exist">用户名已存在</string>
    <string name="error_empty_nick_name">用户名为空</string>
    <string name="error_invalid_password">密码错误</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请填写此项</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_login">请登录</string>
    <string name="login_to_see_more_creditable_content">登录查看你的精彩空间</string>

    <string name="imageview_content_description"></string>
    <string name="hint">提示</string>
    <string name="record_camera_exit_dialog_message">是否放弃这段视频？</string>
    <string name="record_camera_cancel_dialog_yes">确定</string>
    <string name="record_camera_cancel_dialog_no">取消</string>
    <string name="record_camera_progress_message">正在转码…</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="record_check_available_faild">手机满了！至少需要%sM存储空间才能继续拍摄！</string>
    <string name="record_read_object_faild">拍摄信息读取失败！请检查SD卡，稍后重试！</string>
    <string name="action_back">返回</string>
    <string name="record_preview_building">视频生成中…</string>
    <string name="record_preview_music_nothing">无</string>
    <string name="record_preview_tab_theme">主题</string>
    <string name="record_preview_tab_filter">滤镜</string>
    <string name="record_camera_preview_next">下一步</string>
    <string name="record_preview_encoding">正在转码…</string>
    <string name="record_preview_theme_load_faild">主题加载失败</string>
    <string name="download_error">下载失败</string>
    <string name="record_preview_encoding_format">转码中\t%d%%</string>
    <string name="delete_onlinemusic_message">是否删除已下载音乐？</string>

    <string name="release">发布</string>
    <string name="splash_statement">Copyright © 2016 KyleLee All rights reserved</string>
    <string name="please_type_video_describe">请输入视频描述！</string>
    <string name="upload_error">上传错误！</string>
    <string name="preview">预览</string>
    <string name="user_name">用户名</string>
    <string name="send_out">发送</string>

</resources>
