<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_layout"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@color/light_background">

    <ImageView
        android:id="@+id/title_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dip"
        android:contentDescription="@string/imageview_content_description"
        android:padding="10dip"
        android:src="@drawable/title_back_selector"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:textColor="@color/dark_text_color"
        android:gravity="center"
        android:textSize="@dimen/text_size_big"
        android:text="@string/preview">
    </TextView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:visibility="gone" >

        <TextView
            android:id="@+id/titleText"
            style="@style/TitleStyleCenter"
            android:text="下载主题" 
            android:visibility="invisible">
        </TextView>

        <TextView
            android:id="@+id/localmusic"
            style="@style/TitleStyleCenter"
            android:text="SD卡音乐" 
            android:visibility="invisible">
        </TextView>
        
        <TextView
            android:id="@+id/titleText2"
            style="@style/TitleStyleCenter"
            android:visibility="gone"
            android:text="音乐素材库" >
        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/title_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_back"
        android:src="@drawable/title_next_selector"
        android:layout_marginRight="4dip"
        android:padding="10dip"/>

</LinearLayout>